--- a/book-app/src/app/components/book-list/book-list.component.html
+++ b/book-app/src/app/components/book-list/book-list.component.html
@@ -4,11 +4,14 @@
   </div>
 </div>
 
-<div class="row">
-  <div class="col-sm-12">
-    <button type="button" class="btn btn-primary" routerLink="/favorites">See Favorite Books</button>
+<ng-container *ngIf="isFavoriteBooksLength">
+  <div class="row">
+    <div class="col-sm-12">
+      <button type="button" class="btn btn-primary" routerLink="/favorites">See Favorite Books</button>
+    </div>
   </div>
-</div>
+</ng-container>
+
 <ng-container *ngIf="!isLoading">
   <div class="container">
     <div class="table-responsive">
@@ -22,7 +25,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr class="table-row" *ngFor="let book of books;" (click)="showDetails(book.id)">
+        <tr class="table-row" *ngFor="let book of books | paginate: {itemsPerPage: noOfBooks, currentPage: page};" (click)="showDetails(book.id)">
           <td>{{book.name}}</td>
           <td>{{book.book_author}}</td>
           <td>{{book.price}}</td>
@@ -32,6 +35,11 @@
       </table>
     </div>
   </div>
+
+  <div class="text-right">
+    <pagination-controls (pageChange)="page = $event"></pagination-controls>
+  </div>
+
 </ng-container>
 
 <ng-container *ngIf="isLoading">
